# geunu-s-bus

.github/ISSUE_TEMPLATE/: 이슈-생성-템플릿.md
Desktop/project/file/users/users/: models.py
Desktop/project/file/users/users/users/: model.py
django_mini_project/: pyproject.toml
django_mini_project/config/settings/: __init__.py  base.py  dev.py  prod.py
django_mini_project/config/urls/: __init__.py  urls_prod.py
