[project]
name = "django-mini-project"
version = "0.1.0"
description = ""
authors = [
    {name = "gkw314",email = "go980314@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
drf-yasg = "^1.21.10"
pytest = "^8.3.5"
pytest-django = "^4.10.0"
drf-spectacular = "^0.28.0"

